# WebTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  index.html  jsconfig.json  package-lock.json  package.json  vcpkg.json
cmake/: ProjectOptions.cmake
docs/: README.md
docs/worklog/: README.md  step-01-framework-architecture.md  step-02-vcpkg-manifest-bootstrap.md  step-03-vcpkg-cmake-integration.md  step-04-sdl3-host-bootstrap.md  step-05-platform-abstraction.md  step-06-bgfx-render-bootstrap.md  step-07-ui-paint-rect-demo.md  step-08-ui-core-min-scene.md  step-09-ui-layout-min-flex.md  step-10-ui-input-hit-test.md  step-11-ui-input-propagation.md  step-12-ui-focus-keyboard.md  step-13-ui-click-default-action.md  step-14-ui-runtime-listeners.md  step-15-ui-script-bridge-bootstrap.md  step-16-ui-script-query-runtime.md
engine/: CMakeLists.txt
engine/bridge/: CMakeLists.txt
engine/bridge/include/native_ui/bridge/: status.hpp  ui_script_bridge.hpp
engine/bridge/src/: ui_script_bridge.cpp
engine/include/native_ui/: framework_info.hpp
engine/platform/: CMakeLists.txt
engine/platform/include/native_ui/platform/: app.hpp  event.hpp  status.hpp  testing.hpp  types.hpp  window.hpp
engine/platform/src/sdl3/: sdl3_platform.cpp
engine/render/: CMakeLists.txt
engine/render/include/native_ui/render/: context.hpp  status.hpp  types.hpp
engine/render/shaders/: varying.def.sc  vs_fill_rect.sc
engine/render/src/bgfx/: bgfx_context.cpp
engine/script/: CMakeLists.txt
engine/script/include/native_ui/script/: exception.hpp  host_callback.hpp  runtime.hpp  status.hpp  value_utils.hpp
engine/script/src/: exception.cpp  host_callback.cpp  runtime.cpp  value_utils.cpp
engine/ui_core/: CMakeLists.txt
engine/ui_core/include/native_ui/ui_core/: layout_style.hpp  node.hpp  painter.hpp  scene.hpp  semantics.hpp  status.hpp  style.hpp  types.hpp
engine/ui_core/src/: painter.cpp  scene.cpp
engine/ui_input/: CMakeLists.txt
engine/ui_input/include/native_ui/ui_input/: default_action_engine.hpp  event_dispatcher.hpp  focus_manager.hpp  hit_tester.hpp  input_router.hpp  key_router.hpp  status.hpp  types.hpp
engine/ui_input/src/: default_action_engine.cpp  event_dispatcher.cpp  focus_manager.cpp  hit_tester.cpp  input_router.cpp  key_router.cpp
engine/ui_layout/: CMakeLists.txt
engine/ui_layout/include/native_ui/ui_layout/: engine.hpp  status.hpp
engine/ui_layout/src/: layout_engine.cpp
engine/ui_paint/: CMakeLists.txt
engine/ui_paint/include/native_ui/ui_paint/: draw_list.hpp  frame_paint_data.hpp  types.hpp
engine/ui_runtime/: CMakeLists.txt
engine/ui_runtime/include/native_ui/ui_runtime/: listener_registry.hpp  runtime.hpp  status.hpp
engine/ui_runtime/src/: listener_registry.cpp  runtime.cpp
overlays/ports/tinyexr/: fixtargets.patch  portfile.cmake  vcpkg.json
samples/: CMakeLists.txt
samples/hello_host/: CMakeLists.txt
samples/hello_host/src/: main.cpp
samples/ui_click_demo/: CMakeLists.txt
samples/ui_click_demo/src/: main.cpp
samples/ui_core_demo/: CMakeLists.txt
samples/ui_core_demo/src/: main.cpp
samples/ui_focus_demo/: CMakeLists.txt
samples/ui_focus_demo/src/: main.cpp
samples/ui_input_demo/: CMakeLists.txt
samples/ui_input_demo/src/: main.cpp
samples/ui_input_propagation_demo/: CMakeLists.txt
samples/ui_input_propagation_demo/src/: main.cpp
samples/ui_layout_demo/: CMakeLists.txt
samples/ui_layout_demo/src/: main.cpp
samples/ui_listener_demo/: CMakeLists.txt
samples/ui_listener_demo/src/: main.cpp
samples/ui_rect_demo/: CMakeLists.txt
samples/ui_rect_demo/src/: main.cpp
samples/ui_script_demo/: CMakeLists.txt
samples/ui_script_demo/src/: main.cpp
samples/ui_script_query_demo/: CMakeLists.txt
samples/ui_script_query_demo/src/: main.cpp
src/: main.js  style.css
src/package/: filament.js  filament.wasm  update.js
src/script/: engine.js
src/script/Engine/: camera.js  engine.js  light.js  model.js  planemodel.js
src/script/Engine/Math/: math.js
src/script/Math/: math.js
src/vue/: app.vue
src/vue/custom/: show3d.vue
